list.css qo'shildi

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="list.css">
 </head>
 <body>
     <h1>ETIBOR BER OG'ABEK</h1>
+    <ul>
+        <li>adadasda</li>
+        <li>asdadasda</li>
+        <li>adadada</li>
+        <li>asdada</li>
+    </ul>
 </body>
 </html>
